<resources>
    <string name="app_name">MyWorkoutTracker</string>
    <string name="name_your_workout">Name your Workout</string>
    <string name="add_exercise">ADD EXERCISE</string>
    <string name="cancel_workout_button">CANCEL WORKOUT</string>
    <string name="finish_button">FINISH</string>
    <string name="current_workout">Current Workout</string>
    <string name="test">TEST</string>
    <string name="add">ADD</string>
    <string name="workout_tracker_fragment">workoutTrackerFragment</string>'
    <string name="workout_exercise_fragment">workoutExerciseFragment</string>


    <string name="title"><![CDATA[<h3>WORKOUT DATA: </h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="time_spent"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>
    <string name="bench_press">BENCH PRESS</string>
    <string name="barbell_squat">BARBEL SQUAT</string>
    <string name="curls">CURLS</string>
    <string name="cable_flies">CABLE FLIES</string>
    <string name="chin_ups">CHIN UPS</string>
    <string name="lateral_raises">LATERAL RAISES</string>
    <string name="push_ups">PUSH UPS</string>
    <string name="row">ROW</string>
    <string name="sohulder_press">SHOULDER PRESSS</string>
    <string name="squat">SQUAT</string>
    <string name="dips">DIPS</string>
    <string name="no_exercise">NO EXERCISE</string>
</resources>